[project]
authors = [{name = "Christoph Reimer", email = "christoph.reimer@eodc.eu"}]
name = "performance-testing"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["prometheus-client>=0.22.1,<0.23"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
performance_testing = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
locust = ">=2.35.0,<3"
pandas = ">=2.2.3,<3"

[tool.pixi.host-dependencies]
pre-commit = ">=4.2.0,<5"

[tool.pixi.feature.development.dependencies]
act = "*"

[tool.pixi.feature.development.tasks]
act = "act --container-architecture linux/amd64"

[tool.pixi.environments]
dev = {features = ["development"]}
